welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:1: error: Missing closing brace `}' assumed here
def growFlowers()(c:Color){ 
^